--- a/README.Rmd
+++ b/README.Rmd
@@ -29,60 +29,57 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-ernest is a comprehensive toolkit for nested sampling (NS) in R, enabling estimation of Bayesian evidence and posterior distributions for statistical models. Alongside an original R-based implementation of the algorithm described by @skilling2006, ernest provides:
+## A Toolkit for Nested Sampling
 
-1.  S3 objects and methods for defining model likelihoods and prior parameter distributions;
-2.  Methods for simulating, reporting, and visualising uncertainty in NS estimates;
-3.  S3 generics for developers to implement custom likelihood-restricted prior samplers.
-
-ernest's API is inspired by the Python package nestle [@barbary2015], which also influenced dynesty [@speagle2020].
+**ernest** is a comprehensive toolkit for [nested sampling](https://en.wikipedia.org/wiki/Nested_sampling_algorithm) (NS), an algorithm for estimating a statistical model's Bayesian evidence and posterior distribution. It provides S3 objects and methods that make nested sampling accessible, flexible, and robust within the R environment.
 
 ## Installation
 
-Install the development version of ernest from [GitHub](https://github.com/) with:
+Install the development version of ernest from [GitHub](https://github.com/kylesnap/ernest) with:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("kylesnap/ernest")
 ```
 
-## Nested Sampling in a Nutshell
+## Why use ernest?
 
-Nested sampling (NS) is a Bayesian algorithm for evaluating model plausibility, measured as the *Bayesian evidence* or *marginal likelihood* ($\mathcal{Z}$). The evidence normalises the posterior distribution; by reorganising Bayes' theorem, we see that $\mathcal{Z}$ is the probability of the observed data across all possible parameter values $\theta$: $$
-\mathcal{Z} = \int_{\forall \theta} L(\theta) \pi(\theta) d\theta
-$$ For most models, this integral cannot be solved analytically. NS addresses this by dividing the prior space $\pi(\theta)$ into a nested sequence of small volumes, sorted by likelihood, to form a one-dimensional approximation of the evidence integral. NS offers several advantages over other Bayesian methods such as Markov chain Monte Carlo (MCMC):
+In Bayesian inference, evidence ($\mathcal{Z}$, also called the [marginal likelihood](https://en.wikipedia.org/wiki/Marginal_likelihood)) is the probability of observing data $D$ under a proposed model $M$. This is obtained by integrating the model's likelihood over the prior distribution of $M$'s parameters. $\mathcal{Z}$ provides a parameter-independent way to assess the plausibility of $D$ given $M$, and is key for Bayesian model comparison through methods such as [Bayes factors](https://en.wikipedia.org/wiki/Bayes_factor).
 
-1.  NS performs a global exploration of $\pi(\theta)$;
-2.  NS is robust to distributions that are poorly-conditioned (e.g., multiple modes or discontinuities);
-3.  NS can simultaneously estimate a model's evidence and its posterior distribution, and;
-4.  NS provides natural stopping criteria—no need for burn-in or manual convergence checks.
+Calculating $\mathcal{Z}$ is challenging, as it requires evaluating a high-dimensional integral over the parameter space. Nested sampling estimates this integral by dividing the space into a series of small volumes. It starts by drawing points from the prior and ranking them by likelihood. The least likely points are discarded and replaced with new samples from more restricted likelihood regions, gradually compressing the search space. Each round of discarding shrinks the explored volume in a predictable way, helping to approximate the integral.
 
-## Nested Sampling in Ernest
+This approach to estimating $Z$ offers several advantages over methods like Markov chain Monte Carlo (MCMC):
 
-ernest provides a native R and C++11 implementation of nested sampling, with an API designed for R users.
+-   **Robustness**: NS handles complex likelihood surfaces that would otherwise be difficult to traverse, such as those with multiple modes or discontinuities.
+-   **Posterior inference**: After a run, discarded samples can be weighted to approximate the model's posterior distribution.
+-   **Natural stopping criterion**: NS can estimate the amount of evidence left within the unexplored prior volume, and can stop sampling once this amount gets trivially small.
+-   **Tractable uncertainty estimates**: The shrinkage at each iteration follows a uniform order statistic, so uncertainty can be simulated using the results from a single run.
 
-To begin, specify a likelihood function and a prior space. For example:
+ernest's implementation of NS offers R users several benefits:
+
+-   **Native R implementation**: John Skilling's [@skilling2004, @skilling2006] NS algorithm is implemented in R, with no Python or Fortran dependencies. (C++ is used to implement the included likelihood samplers to improve run-time efficiency).
+-   **Type- and size-safety**: ernest helps ensure that the user provides likelihood functions and prior specifications meet the requirements of the NS algorithm.
+-   **Familiar methods**: Sampler specifications and results are stored in S3 objects. Start or continue an NS run with `generate()`, review results with `summary()`, and simulate estimation error with `calculate()`.
+-   **Powerful visualizations**: Plot evidence estimates and analyse posterior distributions using [ggplot2](https://ggplot2.tidyverse.org) and [posterior](https://mc-stan.org/posterior/).
+
+## Quick Example
+
+This example demonstrates a basic workflow: define a prior, specify a likelihood, run nested sampling, and summarise results.
 
 ``` r
 library(ernest)
-library(LaplacesDemon)
 
-# Uniform prior over [-10, 10) for three parameters
-prior <- create_uniform_prior(
-  3,
-  lower = -10,
-  upper = 10,
-  varnames = c("x", "y", "z")
-)
+# Define a prior (i.i.d. multivariate uniform)
+prior <- create_uniform_prior(lower = -10, upper = 10, varnames = c("x", "y", "z"))
 
-# Multivariate normal log-likelihood
+# Define a log-likelihood function (multivariate normal)
 mu <- c(0, 0, 0)
-C <- diag(1, 3)
-C[C == 0] <- 0.95
+Sigma <- diag(1, 3)
+Sigma[Sigma == 0] <- 0.95
 loglike <- create_likelihood(
-  rowwise_fn = dmvn,
+  rowwise_fn = LaplacesDemon::dmvn,
   mu = !!mu,
-  Sigma = !!C,
+  Sigma = !!Sigma,
   log = TRUE
 )
 
@@ -92,26 +89,38 @@ sampler <- ernest_sampler(
   prior = prior,
   n_points = 500
 )
-run <- generate(sampler, max_iterations = 2000, seed = 123)
+run <- generate(sampler, seed = 42)
 
 # Summarise and visualise results
 summary(run)
 plot(run)
-visualize(run, type = "density")
+visualize(run, type = "trace")
 ```
 
-For advanced usage, including custom priors and hierarchical models, see the package vignette.
+For advanced usage, including custom priors and hierarchical models, see the package vignettes.
 
-## Prior Art
+## Learn More
 
-Below are selected packages that implement NS, in addition to nestle and dynesty:
+-   **About NS**: `vignette("nested-sampling-with-ernest")`, @skilling2004, @skilling2006, and @buchner2023.
+-   **How to use ernest**: `vignette("more-ernest-runs.Rmd")`.
 
-| Package | Author | Languages |
-|:---------------------|:--------------------:|:---------------------------:|
-| [polychord](https://github.com/PolyChord/PolyChordLite) | Will Handley, Mike Hobson, & Anthony Lasenby | Fortran, with Python and C/C++ interfaces |
-| [MultiNest](https://github.com/JohannesBuchner/MultiNest) | Farhan Feroz & Mike Hobson | Fortran, with R, Python, and C++ interfaces |
-| [perfectns](https://github.com/ejhigson/perfectns) | Edward Higson | Python |
+## Prior Work
 
-In addition, the nestcheck Python package provides routines for diagnosing nested sampling runs [@anesthetic].
+NS has been implemented in many languages; some offer R interfaces. This non-exhaustive list of popular NS implementations is adapted from @fowlie2021:
 
-### References
+| Package | Citation | Language(s) |
+|:---------------------|:--------------------:|:--------------------------:|
+| [nestle](https://github.com/kbarbary/nestle/tree/master) | @barbary2015 | Python |
+| [dynesty](https://github.com/joshspeagle/dynesty) | @speagle2020 | Python |
+| [DIAMONDS](https://github.com/EnricoCorsaro/DIAMONDS/) | @corsaro2014 | C++ |
+| [MultiNest](https://github.com/JohannesBuchner/MultiNest) | @feroz2009 | Fortran; interfaces for C++, Python, R, and MatLab |
+| [PolyChord](https://github.com/PolyChord/PolyChordLite) | @handley2015 | Fortran; interfaces for C++ and Python |
+| [DNest4](https://github.com/eggplantbren/DNest4) | @brewer2018 | C++; interfaces with Python, R, and Julia |
+
+ernest's design, API, and NS implementation are based on the nestle package, with further inspiration from dynesty.
+
+The [nestcheck](https://github.com/ejhigson/nestcheck/tree/master) Python package provides routines for error estimation and diagnostic plotting with nested sampling runs [@higson2019]. Several of ernest's methods are based on this work.
+
+------------------------------------------------------------------------
+
+\emph{References}
