--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -1,97 +1,82 @@
-@article{skilling2006,
-	title = {Nested {Sampling} for {General} {Bayesian} {Computation}},
-	volume = {1},
-	issn = {1936-0975, 1931-6690},
-	url = {https://projecteuclid.org/journals/bayesian-analysis/volume-1/issue-4/Nested-sampling-for-general-Bayesian-computation/10.1214/06-BA127.full},
-	doi = {10.1214/06-BA127},
-	abstract = {Nested sampling estimates directly how the likelihood function relates to prior mass. The evidence (alternatively the marginal likelihood, marginal density of the data, or the prior predictive) is immediately obtained by summation. It is the prime result of the computation, and is accompanied by an estimate of numerical uncertainty. Samples from the posterior distribution are an optional by-product, obtainable for any temperature. The method relies on sampling within a hard constraint on likelihood value, as opposed to the softened likelihood of annealing methods. Progress depends only on the shape of the "nested" contours of likelihood, and not on the likelihood values. This invariance (over monotonic re-labelling) allows the method to deal with a class of phase-change problems which effectively defeat thermal annealing.},
-	number = {4},
-	urldate = {2024-10-16},
-	journal = {Bayesian Analysis},
+
+@article{skilling2004,
+	title = {Nested Sampling},
 	author = {Skilling, John},
-	month = dec,
-	year = {2006},
-	note = {Publisher: International Society for Bayesian Analysis},
-	keywords = {algorithm, annealing, Bayesian computation, evidence, marginal likelihood, Model selection, nest, phase change},
-	pages = {833--859}
+	year = {2004},
+	month = {11},
+	date = {2004-11-16},
+	journal = {AIP Conference Proceedings},
+	pages = {395--405},
+	volume = {735},
+	number = {1},
+	doi = {10.1063/1.1835238},
+	url = {https://doi.org/10.1063/1.1835238}
 }
 
+@article{skilling2006,
+	title = {Nested Sampling for General Bayesian Computation},
+	author = {Skilling, John},
+	year = {2006},
+	month = {12},
+	date = {2006-12},
+	journal = {Bayesian Analysis},
+	pages = {833--859},
+	volume = {1},
+	number = {4},
+	doi = {10.1214/06-BA127},
+	url = {https://projecteuclid.org/journals/bayesian-analysis/volume-1/issue-4/Nested-sampling-for-general-Bayesian-computation/10.1214/06-BA127.full},
+	note = {Publisher: International Society for Bayesian Analysis}
+}
 
 @article{buchner2023,
-	title = {Nested {Sampling} {Methods}},
-	volume = {17},
-	issn = {1935-7516},
-	url = {https://projecteuclid.org/journals/statistics-surveys/volume-17/issue-none/Nested-sampling-methods/10.1214/23-SS144.full},
-	doi = {10.1214/23-SS144},
-	abstract = {Nested sampling (NS) computes parameter posterior distributions and makes Bayesian model comparison computationally feasible. Its strengths are the unsupervised navigation of complex, potentially multi-modal posteriors until a well-defined termination point. A systematic literature review of nested sampling algorithms and variants is presented. We focus on complete algorithms, including solutions to likelihood-restricted prior sampling, parallelisation, termination and diagnostics. The relation between number of live points, dimensionality and computational cost is studied for two complete algorithms. A new formulation of NS is presented, which casts the parameter space exploration as a search on a tree data structure. Previously published ways of obtaining robust error estimates and dynamic variations of the number of live points are presented as special cases of this formulation. A new online diagnostic test is presented based on previous insertion rank order work. The survey of nested sampling methods concludes with outlooks for future research.},
-	number = {none},
-	urldate = {2025-04-07},
-	journal = {Statistics Surveys},
+	title = {Nested Sampling Methods},
 	author = {Buchner, Johannes},
-	month = jan,
 	year = {2023},
-	note = {Publisher: Amer. Statist. Assoc., the Bernoulli Soc., the Inst. Math. Statist., and the Statist. Soc. Canada},
-	pages = {169--215}
+	month = {01},
+	date = {2023-01},
+	journal = {Statistics Surveys},
+	pages = {169--215},
+	volume = {17},
+	number = {none},
+	doi = {10.1214/23-SS144},
+	url = {https://projecteuclid.org/journals/statistics-surveys/volume-17/issue-none/Nested-sampling-methods/10.1214/23-SS144.full},
+	note = {Publisher: Amer. Statist. Assoc., the Bernoulli Soc., the Inst. Math. Statist., and the Statist. Soc. Canada}
 }
 
-@article{anesthetic,
-	title = {anesthetic: {Nested} {Sampling} {Visualisation}},
-	volume = {4},
-	url = {http://dx.doi.org/10.21105/joss.01414},
-	doi = {10.21105/joss.01414},
-	number = {37},
-	journal = {The Journal of Open Source Software},
-	author = {Handley, Will},
-	month = jun,
-	year = {2019},
-	note = {Publisher: The Open Journal},
-	pages = {1414}
-}
-
-@article{handley2015,
-	title = {{PolyChord}: {Nested} {Sampling} for {Cosmology}},
-	volume = {450},
-	issn = {1745-3933, 1745-3925},
-	shorttitle = {Polychord},
-	url = {http://arxiv.org/abs/1502.01856},
-	doi = {10.1093/mnrasl/slv047},
-	abstract = {PolyChord is a novel nested sampling algorithm tailored for high dimensional parameter spaces. In addition, it can fully exploit a hierarchy of parameter speeds such as is found in CosmoMC and CAMB. It utilises slice sampling at each iteration to sample within the hard likelihood constraint of nested sampling. It can identify and evolve separate modes of a posterior semi-independently and is parallelised using openMPI. PolyChord is available for download at: http://ccpforge.cse.rl.ac.uk/gf/project/polychord/},
+@article{fowlie2021,
+	title = {Nested Sampling with Plateaus},
+	author = {Fowlie, Andrew and Handley, Will and Su, Liangliang},
+	year = {2021},
+	month = {03},
+	date = {2021-03-17},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	pages = {1199--1205},
+	volume = {503},
 	number = {1},
-	urldate = {2025-06-24},
-	journal = {Monthly Notices of the Royal Astronomical Society: Letters},
-	author = {Handley, W. J. and Hobson, M. P. and Lasenby, A. N.},
-	month = jun,
-	year = {2015},
-	note = {arXiv:1502.01856 [astro-ph]},
-	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Cosmology and Nongalactic Astrophysics},
-	pages = {L61--L65}
+	doi = {10.1093/mnras/stab590},
+	url = {http://arxiv.org/abs/2010.13884},
+	note = {arXiv:2010.13884 [stat]}
 }
 
-@misc{barbary2015,
-	title = {nestle: {Pure} {Python}, {MIT}-licensed implementation of nested sampling algorithms for evaluating {Bayesian} evidence.},
-	shorttitle = {nestle},
-	url = {https://github.com/kbarbary/nestle},
-	urldate = {2025-08-19},
+@book{barbary2015,
+	title = {nestle: Pure Python, MIT-licensed implementation of nested sampling algorithms for evaluating Bayesian evidence.},
 	author = {Barbary, Kyle},
-	year = {2015}
+	year = {2015},
+	date = {2015},
+	url = {https://github.com/kbarbary/nestle}
 }
 
 @article{speagle2020,
-	title = {{DYNESTY}: {A} {Dynamic} {Nested} {Sampling} {Package} for {Estimating} {Bayesian} {Posteriors} and {Evidences}},
-	volume = {493},
-	issn = {0035-8711},
-	shorttitle = {Dynesty},
-	url = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.493.3132S},
-	doi = {10.1093/mnras/staa278},
-	abstract = {We present DYNESTY, a public, open-source, PYTHON package to estimate Bayesian posteriors and evidences (marginal likelihoods) using the dynamic nested sampling methods developed by Higson et al. By adaptively allocating samples based on posterior structure, dynamic nested sampling has the benefits of Markov chain Monte Carlo (MCMC) algorithms that focus exclusively on posterior estimation while retaining nested sampling's ability to estimate evidences and sample from complex, multimodal distributions. We provide an overview of nested sampling, its extension to dynamic nested sampling, the algorithmic challenges involved, and the various approaches taken to solve them in this and previous work. We then examine DYNESTY's performance on a variety of toy problems along with several astronomical applications. We find in particular problems DYNESTY can provide substantial improvements in sampling efficiency compared to popular MCMC approaches in the astronomical literature. More detailed statistical results related to nested sampling are also included in the appendix.},
-	urldate = {2024-10-24},
-	journal = {Monthly Notices of the Royal Astronomical Society},
+	title = {DYNESTY: A Dynamic Nested Sampling Package for Estimating Bayesian Posteriors and Evidences},
 	author = {Speagle, Joshua S.},
-	month = apr,
 	year = {2020},
-	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics, methods: data analysis, methods: statistical, Statistics - Computation},
+	month = {04},
+	date = {2020-04-01},
+	journal = {Monthly Notices of the Royal Astronomical Society},
 	pages = {3132--3158},
-	file = {Full Text PDF:/Users/ksnap/Zotero/storage/4L47UNQ3/Speagle - 2020 - DYNESTY a dynamic nested sampling package for est.pdf:application/pdf},
+	volume = {493},
+	doi = {10.1093/mnras/staa278},
+	url = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.493.3132S}
 }
 
 @article{ashton2022,
@@ -105,4 +90,73 @@
 	number = {1},
 	doi = {10.1038/s43586-022-00121-x},
 	url = {http://www.scopus.com/inward/record.url?scp=85131638539&partnerID=8YFLogxK}
+
+@article{corsaro2014,
+	title = {DIAMONDS: A New Bayesian Nested Sampling Tool - Application to Peak Bagging of Solar-Like Oscillations},
+	author = {Corsaro, E. and Ridder, J. De},
+	year = {2014},
+	month = {11},
+	date = {2014-11-01},
+	journal = {Astronomy & Astrophysics},
+	pages = {A71},
+	volume = {571},
+	doi = {10.1051/0004-6361/201424181},
+	url = {https://www.aanda.org/articles/aa/abs/2014/11/aa24181-14/aa24181-14.html},
+	note = {Publisher: EDP Sciences},
+	langid = {en}
+}
+
+@article{feroz2009,
+	title = {MULTINEST: an efficient and robust Bayesian inference tool for cosmology and particle physics},
+	author = {Feroz, F. and Hobson, M. P. and Bridges, M.},
+	year = {2009},
+	month = {10},
+	date = {2009-10-01},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	pages = {1601--1614},
+	volume = {398},
+	doi = {10.1111/j.1365-2966.2009.14548.x},
+	url = {https://ui.adsabs.harvard.edu/abs/2009MNRAS.398.1601F}
+}
+
+@article{handley2015,
+	title = {PolyChord: Next-Generation Nested Sampling},
+	author = {Handley, W. J. and Hobson, M. P. and Lasenby, A. N.},
+	year = {2015},
+	month = {11},
+	date = {2015-11-11},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	pages = {4384--4398},
+	volume = {453},
+	number = {4},
+	doi = {10.1093/mnras/stv1911},
+	url = {https://doi.org/10.1093/mnras/stv1911}
+}
+
+@article{brewer2018,
+	title = {DNest4: Diffusive Nested Sampling in C++ and Python},
+	author = {Brewer, Brendon J. and Foreman-Mackey, Daniel},
+	year = {2018},
+	month = {09},
+	date = {2018-09-04},
+	journal = {Journal of Statistical Software},
+	pages = {1--33},
+	volume = {86},
+	doi = {10.18637/jss.v086.i07},
+	url = {https://doi.org/10.18637/jss.v086.i07},
+	langid = {en}
+}
+
+@article{higson2019,
+	title = {Nestcheck: Diagnostic Tests for Nested Sampling Calculations},
+	author = {Higson, Edward and Handley, Will and Hobson, Michael and Lasenby, Anthony},
+	year = {2019},
+	month = {02},
+	date = {2019-02-21},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	pages = {2044--2056},
+	volume = {483},
+	number = {2},
+	doi = {10.1093/mnras/sty3090},
+	url = {https://doi.org/10.1093/mnras/sty3090}
 }
