Rewrite of vignettes and README.

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -94,3 +94,15 @@
 	file = {Full Text PDF:/Users/ksnap/Zotero/storage/4L47UNQ3/Speagle - 2020 - DYNESTY a dynamic nested sampling package for est.pdf:application/pdf},
 }
 
+@article{ashton2022,
+	title = {Nested Sampling for physical scientists},
+	author = {Ashton, Greg and Bernstein, Noam and Buchner, Johannes and Chen, Xi and {Csányi}, {Gábor} and Feroz, Farhan and Fowlie, Andrew and Griffiths, Matthew and Habeck, Michael and Handley, Will and Higson, Edward and Hobson, Michael and Lasenby, Anthony and Parkinson, David B. and {Pártay}, Livia B. and Pitkin, Matthew and Schneider, Doris and South, Leah and Speagle, Joshua and Veitch, John and Wacker, Philipp and Wales, David and Yallup, David},
+	year = {2022},
+	month = {05},
+	date = {2022-05-26},
+	journal = {Nature Reviews Methods Primers},
+	volume = {2},
+	number = {1},
+	doi = {10.1038/s43586-022-00121-x},
+	url = {http://www.scopus.com/inward/record.url?scp=85131638539&partnerID=8YFLogxK}
+}
