--- a/vignettes/more-ernest-runs.Rmd
+++ b/vignettes/more-ernest-runs.Rmd
@@ -1,12 +1,11 @@
 ---
-title: "More Ernest Runs"
+title: "More Nested Sampling Runs with Ernest"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Classical Nested Sampling Examples}
+  %\VignetteIndexEntry{More Ernest Runs}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -14,164 +13,177 @@ knitr::opts_chunk$set(
 )
 ```
 
+```{r, include = FALSE, eval = FALSE}
+#' @srrstats {G1.5} These examples are based on classical test problems for
+#' nested sampling used within the nestle package. These problems are
+#' also used within ernest's test suite to validate its behaviour.
+#' @srrstats {G5.1} Tests and test data are provided here for users to
+#' interact with.
+#' @srrstats {BS1.1} Demonstrates how to enter data through an
+#' anonymous function.
+```
+
 ```{r setup}
 library(ernest)
 ```
 
-```{r, include = FALSE, echo = FALSE}
-#' @srrstats {G1.5} These examples are based on classical test problems for
-#' nested sampling, including tests for the dynesty NS package. These problems
-#' are additionally used within ernest's test suite to validate its behaviour.
-#' @srrstats {G5.1} Tests and test data are made available here for users to
-#' interact with.
-#' @srrstats {BS1.1} Provides an example on how to enter data through an
-#' anonymous function.
-```
+ernest uses comprehensive tests to verify its sampling behaviour against the Python package [nestle](https://github.com/kbarbary/nestle/blob/master/). This vignette describes some of these tests and demonstrates how to construct likelihood functions for ernest.
 
-This vignette demonstrates how to use the ernest package to solve several classical nested sampling problems. These examples are based on standard benchmarks from the literature and are also used in the package's test suite to validate correctness. You'll learn how to specify likelihoods and priors, run nested sampling, and interpret the results.
+## Two Gaussian "Blobs"
 
-# 1. Gaussian Shells
-The "Gaussian shells" problem is a standard test for nested sampling algorithms, as they illustrate the ability of nested sampling to deal with oddly-shaped distributions that can be difficult to traverse with traditional random-walk MCMC methods.
+We estimate the Bayesian evidence for a simple two-dimensional problem with two well-separated Gaussian modes—a classical nested sampling test problem, as the evidence can be solved analytically.
 
-We will solve the shells problem in 2 and 5 dimensions. To make this easier, we'll build a function factory to specify the log-likelihood of two Gaussian shells in $d$-dimensional space, with one shell offset in the first dimension by 3.5.
+Define the log-likelihood and prior:
 
 ```{r}
-gaussian_shell <- function(n_dim) {
-  c_1 <- numeric(n_dim) # Center of shell 1
-  c_2 <- numeric(n_dim) # Center of shell 2
-  c_1[1] <- 3.5 # 1D of the first shell is off-center
+# Log-likelihood for two Gaussian blobs
+gaussian_blobs_loglik <- function(x) {
+  sigma <- 0.1
+  mu1 <- c(1, 1)
+  mu2 <- -c(1, 1)
+  sigma_inv <- diag(2) / sigma^2
 
-  r <- 2 # Radius
-  w <- 0.1 # Shell width
-  const <- log(1 / sqrt(2 * pi * w^2))
-
-  # Single-shell log-likelihood
-  log_lik_shell <- function(theta, c) {
-    d <- sqrt(sum((theta - c)^2))
-    const - (d - r)^2 / (2 * w^2)
-  }
-
-  # log-likelihood of two shells
-  function(theta) {
-    matrixStats::logSumExp(c(
-      log_lik_shell(theta, c_1),
-      log_lik_shell(theta, c_2)
-    ))
-  }
+  if (!is.matrix(x)) dim(x) <- c(1, length(x))
+  dx1 <- sweep(x, 2, mu1)
+  dx2 <- sweep(x, 2, mu2)
+  val1 <- -0.5 * rowSums((dx1 %*% sigma_inv) * dx1)
+  val2 <- -0.5 * rowSums((dx2 %*% sigma_inv) * dx2)
+  matrixStats::rowLogSumExps(cbind(val1, val2))
 }
+
+# Uniform prior over [-5, 5] in each dimension
+prior <- create_uniform_prior(lower = -5, upper = 5, varnames = c("A", "B"))
 ```
 
-## 1.1. Shells in 2D
+Set up the sampler and run nested sampling:
 
 ```{r}
-log_lik_2d <- gaussian_shell(2)
-prior_2d <- create_uniform_prior(
-  n_dim = 2,
-  lower = -6,
-  upper = 6,
-  varnames = c("x", "y")
+sampler <- ernest_sampler(gaussian_blobs_loglik, prior, n_points = 100)
+result <- generate(sampler, seed = 42, show_progress = FALSE)
+```
+
+For this distribution, the analytical evidence is $\mathcal{Z} = \log(2^2 * \pi * 0.1^2 / 100) \approx -6.679$. Use `summary` to extract the log-evidence (`log_evidence`) and its uncertainty (`log_evidence_err`):
+
+```{r}
+smry <- summary(result)
+smry
+```
+
+Plot the progress of the evidence estimate:
+
+```{r}
+plot(result)
+```
+
+## Example: Estimating the Evidence for the Eggbox Problem
+
+The "eggbox" problem is a challenging test case for nested sampling due to its highly multimodal likelihood surface. Define the log-likelihood and prior:
+
+```{r}
+eggbox_loglik <- function(x) {
+  tmax <- 5.0 * pi
+  if (!is.matrix(x)) dim(x) <- c(1, length(x))
+  t <- sweep(2.0 * tmax * x, 2, tmax, "-")
+  (2.0 + cos(t[, 1] / 2.0) * cos(t[, 2] / 2.0))^5.0
+}
+
+# Uniform prior over [0, 1] in each dimension
+eggbox_prior <- create_uniform_prior(varnames = c("A", "B"))
+```
+
+Visualize the likelihood surface:
+
+```{r echo = FALSE}
+eggbox_sample <- expand.grid(
+  "A" = seq(0, 1, by = 0.01),
+  "B" = seq(0, 1, by = 0.01)
+)
+eggbox_sample$logl <- purrr::map2_dbl(
+  eggbox_sample$A, 
+  eggbox_sample$B, 
+  \(a, b) eggbox_loglik(c(a, b))
 )
 
-sampler_2d <- ernest_sampler(log_lik_2d, prior_2d)
-run_2d <- generate(sampler_2d, show_progress = FALSE)
-run_2d
+library(ggplot2)
+ggplot(eggbox_sample, aes(A, B, fill = logl)) +
+  geom_tile() +
+  scale_fill_viridis_c("Log-Lik.")
 ```
 
-We can review the results with more detail using `summary()`:
+Run the sampler and compare the estimated log-evidence to the nestle result ($\approx 235.895$):
 
 ```{r}
-summary(run_2d)
+sampler <- ernest_sampler(eggbox_loglik, eggbox_prior)
+result <- generate(sampler, seed = 42, show_progress = FALSE)
+smry <- summary(result)
+smry
 ```
 
-## 1.2. Shells in 5D
+Plot the posterior distribution:
 
 ```{r}
-log_lik_5d <- gaussian_shell(5)
-prior_5d <- create_uniform_prior(
-  n_dim = 5,
-  lower = -6,
-  upper = 6,
-  varnames = LETTERS[1:5]
-)
-
-sampler_5d <- ernest_sampler(log_lik_5d, prior_5d)
-run_5d <- generate(sampler_5d, show_progress = FALSE)
-run_5d
+visualize(result, type = "density")
 ```
 
-If we wanted to ensure ourselves that our prior was behaving as expected, we can use the `posterior` package to examine our recorded samples.
+## Adding Data
+
+Often, the likelihood depends on observed data. In ernest, you must incorporate the data within your likelihood function. Here, we show how to supply data using both `create_likelihood()` and an anonymous function, with a certified dataset from the U.S. National Institute of Science and Technology ([NIST](https://www.itl.nist.gov/div898/strd/mcmc/mcmc01.html)).
 
 ```{r}
-library(posterior)
-draws_5d <- as_draws(run_5d)
-range(extract_variable(draws_5d, "A"))
-range(extract_variable(draws_5d, "B"))
-```
-
-# 2. The Eggbox distribution
-The eggbox is a highly multimodal likelihood surface, used as another classical example in nested sampling.
-
-```{r}
-eggbox_loglik <- function(theta) {
-  (2 + cos(theta[1] / 2) * cos(theta[2] / 2))^5
-}
-prior_eggbox <- create_uniform_prior(n_dim = 2, upper = 10 * pi)
-sampler_eggbox <- ernest_sampler(eggbox_loglik, prior_eggbox)
-run_eggbox <- generate(sampler_eggbox, show_progress = FALSE)
-summary(run_eggbox)
-```
-
-We can plot the run to examine how our evidence estimates changed over time:
-
-```{r}
-plot(run_eggbox)
-```
-
-Additionally, we can use `calculate` to simulate uncertainty around our log-volume estimates. As a shortcut, we can use `plot` with a non-zero `ndraws` argument.
-
-```{r}
-plot(run_eggbox, ndraws = 100)
-```
-
-# 3. Working with Data
-
-To use data within an ernest run, you'll have to incorporate it within your log-likelihood function. In many cases, this can be done through using an anonymous function: If `f` is a function that takes in parameters `theta` and data `y`, then you can pass data through to ernest by using the syntax `\(theta) f(theta, y)`.
-
-As a demonstration, consider how ernest performs posterior estimation for [this](https://www.itl.nist.gov/div898/strd/mcmc/mcmc01.html) dataset from the National Institutte of Science and Technology.
-
-```{r}
-# NIST dataset
-data <- c(
+# Sample data: vector of observations
+y <- c(
   100000000.2, 100000000.1, 100000000.3, 100000000.1, 100000000.3,
   100000000.1, 100000000.3, 100000000.1, 100000000.3, 100000000.1, 100000000.3
 )
 
-log_lik_norm <- function(theta, y) {
-  sum(dnorm(y, theta[1], theta[2], log = TRUE))
+# Model likelihood: Y ~ N(mu, sd)
+log_lik <- function(theta, data) {
+  if (theta[2] <= 0) return(-Inf)
+  sum(stats::dnorm(y, mean = theta[1], sd = theta[2], log = TRUE))
 }
-
-prior_norm <- create_normal_prior(
-  n_dim = 2,
-  mean = c(100000000, 0.1),
-  sd = 10,
-  lower = c(-Inf, 0),
-  varnames = c("mean", "sd")
-)
-
-sampler_norm <- ernest_sampler(
-  log_lik = \(theta) log_lik_norm(theta, y = data),
-  prior_norm
-)
-run_norm <- generate(sampler_norm, show_progress = FALSE)
-run_norm
 ```
 
-To examine the posterior, we need to first call `posterior::resample_draws()` on the `draws` arugment produced from an `ernest_run`. This is because `ernest` binds the log-importance posterior weights to the `as_draws` object as a hidden variable.
+Note: `log_lik` returns `-Inf` for non-positive standard deviations, explicitly censoring impossible parameter values.
 
-Once this is done, we can use the `posterior` package to examine the posterior distribution
+Supply data using either an anonymous function or the dots argument of `create_likelihood`:
 
 ```{r}
-draws_norm <- as_draws(run_norm) |> resample_draws()
+# Anonymous function
+anon_log_lik <- \(theta) log_lik(theta, data = y) 
 
-summarize_draws(draws_norm)
+# Using dots for create_likelihood
+partial_log_lik <- create_likelihood(fn = log_lik, data = !!y)
+
+expected_mean <- 100000000.200000000000000
+expected_sd <- 0.108372230793914
+anon_log_lik(c(expected_mean, expected_sd))
+partial_log_lik(c(expected_mean, expected_sd))
+```
+
+Define the prior for the mean and standard deviation, then run the sampler. The prior is constrained near the expected posterior values: the number of iterations required is proportional to the product of the number of live points (`n_points`) and the [KL divergence](https://en.wikipedia.org/wiki/Kullback–Leibler_divergence) between prior and posterior.
+
+```{r}
+prior <- create_uniform_prior(
+  lower = c(99999999, 0.01),
+  upper = c(100000001, 1),
+  varnames = c("mu", "sigma")
+)
+sampler <- ernest_sampler(partial_log_lik, prior)
+result <- generate(sampler, seed = 42, show_progress = FALSE)
+```
+
+Examine the estimated posterior distribution:
+
+```{r}
+draws <- as_draws(result) |>
+  posterior::resample_draws()
+```
+
+Summarize the posterior for each parameter (e.g., median and 95% interval):
+
+```{r}
+posterior::summarise_draws(
+  draws,
+  \(x) quantile(x, probs = c(0.05, 0.5, 0.95))
+)
 ```
