--- a/vignettes/nested-sampling-with-ernest.Rmd
+++ b/vignettes/nested-sampling-with-ernest.Rmd
@@ -80,7 +80,7 @@ The following defines a uniform prior over $[-10, 10)$ for each parameter in 3D 
 prior <- create_uniform_prior(
   lower = -10,
   upper = 10,
-  varnames = c("x", "y", "z")
+  names = c("x", "y", "z")
 )
 prior
 ```
@@ -113,8 +113,8 @@ five_dim <- function(u) {
 }
 create_prior(
   fn = five_dim,
-  .n_dim = 5,
-  .varnames = c("MVN", "MVN", "Beta", "Gamma", "Norm[2, 10]")
+  n_dim = 5,
+  names = c("MVN", "MVN", "Beta", "Gamma", "Norm[2, 10]")
 )
 ```
 
@@ -132,9 +132,9 @@ hierarchical <- function(u) {
 }
 create_prior(
   fn = hierarchical,
-  .n_dim = 3,
-  .varnames = c("mu", "sigma", "x"),
-  .lower = c(-Inf, 0, -Inf)
+  n_dim = 3,
+  names = c("mu", "sigma", "x"),
+  lower = c(-Inf, 0, -Inf)
 )
 ```
 
