--- a/README.Rmd
+++ b/README.Rmd
@@ -68,7 +68,7 @@ This example demonstrates a basic workflow: define a prior, specify a likelihood
 library(ernest)
 
 # Define a prior (i.i.d. multivariate uniform)
-prior <- create_uniform_prior(lower = -10, upper = 10, varnames = c("x", "y", "z"))
+prior <- create_uniform_prior(lower = -10, upper = 10, names = c("x", "y", "z"))
 
 # Define a log-likelihood function (multivariate normal)
 mu <- c(0, 0, 0)
