--- a/vignettes/nested-sampling-with-ernest.Rmd
+++ b/vignettes/nested-sampling-with-ernest.Rmd
@@ -113,7 +113,6 @@ five_dim <- function(u) {
 }
 create_prior(
   fn = five_dim,
-  n_dim = 5,
   names = c("MVN", "MVN", "Beta", "Gamma", "Norm[2, 10]")
 )
 ```
@@ -132,7 +131,6 @@ hierarchical <- function(u) {
 }
 create_prior(
   fn = hierarchical,
-  n_dim = 3,
   names = c("mu", "sigma", "x"),
   lower = c(-Inf, 0, -Inf)
 )
@@ -150,10 +148,7 @@ C <- diag(1, 3)
 C[C == 0] <- 0.95
 
 loglike <- create_likelihood(
-  rowwise_fn = dmvn,
-  mu = !!mu,
-  Sigma = !!C,
-  log = TRUE
+  \(x) dmvn(x, mu = mu, Sigma = C, log = TRUE)
 )
 ```
 
