--- a/README.Rmd
+++ b/README.Rmd
@@ -75,10 +75,7 @@ mu <- c(0, 0, 0)
 Sigma <- diag(1, 3)
 Sigma[Sigma == 0] <- 0.95
 loglike <- create_likelihood(
-  rowwise_fn = LaplacesDemon::dmvn,
-  mu = !!mu,
-  Sigma = !!Sigma,
-  log = TRUE
+  \(x) LaplacesDemon::dmvn(x, mu = mu, Sigma = Sigma, log = TRUE)
 )
 
 # Set up and run the sampler
